@@ -61,4 +61,13 @@ public class LinuxJavaFx {
             System.err.println("Couldn't set awtAppClassName");
         }
     }
+
+
+//    WARNING: An illegal reflective access operation has occurred
+//    WARNING: Illegal reflective access by de.p2tools.p2Lib.guiTools.LinuxJavaFx (file:/home/emil/daten/software/javaFx/MTPlayer/MTPlayer/dist/MTPlayer.jar) to field sun.awt.X11.XToolkit.awtAppClassName
+//    WARNING: Please consider reporting this to the maintainers of de.p2tools.p2Lib.guiTools.LinuxJavaFx
+//    WARNING: Use --illegal-access=warn to enable warnings of further illegal reflective access operations
+//    WARNING: All illegal access operations will be denied in a future release
+
+
 }
